<resources>
    <string name="app_name">Trashscan</string>
    <string name="login">Login</string>
    <string name="already_registered">Already Registered</string>
    <string name="register">Register</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false" >AIzaSyCEDSCzde31V04YA5CpGlSsJbzWgDL6E1I</string>
    <string name="fullname">Full Name</string>
    <string name="not_registered">Not Regesitered?</string>
    <string name="nav_header_desc">Nav Header Desc</string>
    <string name="open" />
    <string name="close" />
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="contact_us">Contact Us</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="trash_scan">TRASH SCAN</string>
    <string name="by_jewel_joyce_ramos">by Jewel Joyce Ramos</string>
    <string name="header">header</string>
    <string name="trash">Trash</string>
    <string name="profile_image">Profile Image</string>
    <string name="save">Save</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name (optional)</string>
    <string name="next">NEXT</string>
    <string name="last_name">Last Name</string>
    <string name="back">Back</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="logo">Logo</string>
    <string name="create_an_account">Create an account</string>
    <string name="create_home_owner_account">CREATE HOME OWNER ACCOUNT</string>
    <string name="create_junkshop_account">CREATE JUNKSHOP ACCOUNT</string>
    <string name="address">Address</string>
    <string name="violation">Violation</string>
    <string name="collection">Collection</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="violation1">that provides for a systematic, comprehensive and ecological
        waste management program to ensure the protection of public health and the environment.
        It mandates the bureau to provide secretariat support to the National Solid Waste Management
        Commission in the implementation of the solid waste management plans and prescribes policies
        to achieve the objectives of the National Ecology Center that is in charge of information dissemination,
        consultation, education and training of various local government units on ecological waste management.
        The ecological solid waste management program is expected to assist Local Government Units in implementing RA 9003
        or the Ecological Solid Waste Management Act particularly in the development of their 10 yr. SWM Plan, closure and
        rehabilitation of dumpsites, establishment of Materials Recovery Facilities, and an environmentally sound disposal system.
        Under R.A. 9003, violation of said provision is punishable with imprisonment from one day to three years, or fines from P300 to
        as much as P500,000. With such stiff penalties, the DENR chief believes that collectors will be encouraged to implement ecological
        waste management and dispose of their collected garbage properly. “At the same time, this will also compel those who still do not
        segregate their own wastes to do so</string>
    <string name="violation2">
        <b>Section 2. Declaration of Policy</b><br />
        Consistent with the policy of the State to protect and advance the right of the people to a balanced and healthful ecology in accord with the rhythm and harmony of nature, and in recognition of the vital role of the youth in nation building and the role of education to foster patriotism and nationalism, accelerate social progress, and promote total human liberation and development, the state shall promote national awareness on the role of natural resources in economic growth and the importance of environmental conservation and ecological balance towards sustained national development.<br />
        <b>Section 4. Environmental Education and Activities as Part of National Service Training Program</b><br />
        The CHED and the TESDA shall include environmental education and awareness programs and activities in the National Service Training Program under Republic Act No. 9163, as part of the Civic Welfare Training Service component required for all baccalaureate degree courses and vocational courses with a curriculum of at least two (2) years.<br />
        <b>Section 5. Declaration of Environmental Awareness Month</b><br />
        Pursuant to the policy set forth in this Act, the month of November of every year shall be known as the "Environmental Awareness Month" throughout the
    </string>
    <string name="violation3">Section 45. Violation of Standards for Stationary Sources
        For actual exceedance of any pollution or air quality standards under this Act
        or its rules and regulations, the Department, through the Pollution Adjudication Board (PAB)
        , shall impose a fine of not more than One hundred thousand pesos (P100,000.00) for every day
        of violation against the owner or operator of a stationary source until such time that the
        standards have been complied with.
        For purposes of the application of the fines, the PAB shall prepare a fine
        rating system to adjust the maximum fine based on the violator\s ability to pay, degree of willfulness,
        degree of negligence, history of non-compliance and degree of recalcitrance: Provided, That in case of
        negligence, the first time offender\s ability to pay may likewise be considered by the Pollution
        Adjudication Board: Provided, Further, That in the absence of any extenuating or aggravating circumstances,
        the amount of fine for negligence shall be equivalent to one-half of the fine for willful violation.
        The fines herein prescribed shall be increased by at least ten percent (10%), every three (3) years to
        compensate for inflation and to maintain the deterrent function of such fines.
        In addition to the fines, the PAB shall order closure, suspension of development,
        construction, or operations of the stationary sources until such time that proper
        environmental safeguards are put in place: Provided, That an establishment liable for a
        third offense shall suffer permanent closure immediately. This paragraph shall be without prejudice
        to the immediate issuance of an ex parte order for such closure, suspension of development or construction, or cessation of operations during the pendency of the case upon prima facie evidence that their is imminent threat to life, public health, safety or general welfare, or to plant or animal life, or whenever there is an exceedance of the emission standards set by the Department and/or the Board and/or the appropriate LGU.<br />
        Section 47. Fines and Penalties for Violations of Other Provisions in the Act
        For violations of all other provisions provided in this Act and of the rules and regulations thereof,
        a fine of not less than Ten thousand pesos (P10,000) but not more than One Hundred thousand Pesos (P100,000)
        or six (6) months to six (6) years imprisonment or both shall be imposed. If the offender is a juridical person,
        the president, manager, directors, trustees, the pollution control officer or the officials directly in charge of the operations shall suffer the penalty herein
    </string>
    <string name="phone_number">Phone Number</string>
    <string name="junk_shop_owner">Junk shop owner</string>
    <string name="_0">0</string>
    <string name="lastname">Lastname</string>
    <string name="description">Description</string>
    <string name="barangay">Barangay</string>
    <string name="city">City</string>
    <string name="province">Province</string>
    <string name="zip_code">Zip Code</string>
    <string name="urdaneta">Urdaneta</string>
    <string name="save_address">Save Address</string>
    <string name="waste_name">Waste Name:</string>
    <string name="market_place">Market Place</string>
    <string name="Home_owner">Home owner</string>
    <string name="junkshop_owner">Junkshop owner</string>
</resources>