<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="bottom"
    tools:context=".login.CreateAccountActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="10dp">
        <EditText
            android:id="@+id/inputFirstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/firstname"
            android:textSize="15sp"
            android:layout_margin="10dp"
            android:layout_marginEnd="5dp"
            android:padding="10dp"
            android:inputType="text"
            android:background="@drawable/ic_rectangle_200"
            />

        <EditText
            android:id="@+id/inputLastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/lastname"
            android:textSize="15sp"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:layout_marginStart="5dp"
            android:inputType="text"
            android:background="@drawable/ic_rectangle_200"
            />
        <EditText
            android:id="@+id/inputPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone"
            android:textSize="15sp"
            android:padding="10dp"
            android:layout_margin="10dp"
            android:layout_marginStart="5dp"
            android:inputType="phone"
            android:background="@drawable/ic_rectangle_200"
            />

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textSize="15sp"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:inputType="textEmailAddress"
            android:background="@drawable/ic_rectangle_200"
            />
        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textSize="15sp"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:inputType="textPassword"
            android:background="@drawable/ic_rectangle_200"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="@color/purple_500"
            android:id="@+id/buttonCreateAccount"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/create_account"
            android:textAllCaps="false"
            />
        <TextView
            android:id="@+id/textButtonSignIN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_margin="10dp"
            android:text="@string/already_have_an_account_sign_in"/>
    </LinearLayout>
</LinearLayout>