<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#F1EFEF"
    tools:context=".dialogs.ViewWaste">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#F1EFEF">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/black"
        android:id="@+id/wasteImage"
        android:contentDescription="@string/waste_name" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:layout_marginBottom="5dp"
            android:background="@color/white"
            android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:id="@+id/textWasteName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:text="@string/waste_name"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:textColor="@color/black"
            android:id="@+id/textPrice"
            android:text="@string/_0"/>
        </LinearLayout>

        <TextView
            android:id="@+id/textDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="@string/description"
            android:textColor="@color/black" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/white"
            android:padding="5dp"
            android:layout_marginTop="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <de.hdodenhof.circleimageview.CircleImageView
                    xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/imageUserProfile"
                    android:layout_width="50dp"
                    android:scaleType="centerCrop"
                    android:gravity="center"
                    android:layout_height="50dp"
                    android:layout_margin="5dp"
                    android:src="@drawable/person"
                    app:civ_border_color="#FF000000"/>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:orientation="vertical"
                    android:layout_weight="1">
                    <TextView
                        android:id="@+id/junkShopOwnerName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_medium"
                        android:textColor="@color/black"
                        android:text="@string/junk_shop_owner"/>
                    <TextView
                        android:id="@+id/junkshopAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_light"
                        android:textColor="@color/black"
                        android:text="@string/address"/>

                </LinearLayout>

                <ImageButton
                    android:id="@+id/buttonMessageOwner"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/ic_message"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Contacts"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins_medium"/>
                <TextView
                    android:id="@+id/textPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_light"
                    android:textColor="@color/black"
                    android:text="@string/phone"/>
                <TextView
                    android:id="@+id/textEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_light"
                    android:textColor="@color/black"
                    android:text="@string/email"/>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/white"
            android:padding="10dp"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/market_place"
                android:textSize="14sp"
                android:textColor="#000" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerviewWaste"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    tools:listitem="@layout/row_junkshop_waste"/>


        </LinearLayout>
    </LinearLayout>
    </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>